--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
-    <!-- Favicon personalizado -->
-    <link rel="icon" href="%PUBLIC_URL%/../src/logo192.svg" type="image/svg+xml" />
+
+    <!-- ✅ Favicon personalizado (ya en /public) -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/svg+xml" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Iglesia Web</title>
+    <title>Asociación Jesuscristo Liberador</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
