--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Asociación Jesuscristo Liberador</title>
+    <title>Asociación Sacerdotal Jesuscristo Liberador</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
